# pointcloud2_segments_tools

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
config/: config.yaml  config_generator.yaml  laserscan_filter_humans_only.yaml  laserscan_filter_walls_only.yaml
launch/: annot.launch  generate_dataset.launch  laserscan_filter_humans_only.launch  laserscan_filter_walls_only.launch
scripts/: csv_to_h5.py  h5_shuffle_tt.py  h5_viewer.py
scripts/data_prep/: csv_to_h5.py  h5_shuffle_tt.py  h5_viewer.py  rosbag_prep.sh
scripts/pointnet++/: model.py  params.json  predict.py  train.py
scripts/pointnet++/dataset/: semantic.py
scripts/pointnet++/deprecated/: ros_test.py  train.py
scripts/pointnet++/deprecated/utils/: tf_util.py
scripts/pointnet++/logs/log/: best_model_epoch_125.ckpt.index  best_model_epoch_185.ckpt.index  best_model_epoch_195.ckpt.index  best_model_epoch_205.ckpt.index  best_model_epoch_335.ckpt.index  best_model_epoch_365.ckpt.index  best_model_epoch_420.ckpt.index  best_model_epoch_430.ckpt.index  checkpoint  model.ckpt.index
scripts/pointnet++/models/: model.py
scripts/pointnet++/tf_ops/sampling/: tf_sampling_compile.sh
scripts/pointnet++/utils/: pointnet_util.py  tf_util.py
src/: annotation_tool.cpp  dataset_generator.cpp
